--- a/ServiceManagerBackend/package.json
+++ b/ServiceManagerBackend/package.json
@@ -19,7 +19,9 @@
     "express": "^5.1.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.0",
     "mysql2": "^3.14.1",
+    "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
     "sequelize": "^6.37.7"
   }
